--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-  
+  <header>
+     <a href="./index.html">
+        <!-- <svg >
+            <use href="./images/symbol-defs.svg#icon-logo"></use>
+        </svg> -->
+
+        <svg width="80" height="24">
+            <use href="./images/symbol-defs.svg#icon-logo"></use>
+          </svg>
+     </a>
+  </header>
 </body>
 </html>
