--- a/index.html
+++ b/index.html
@@ -48,12 +48,44 @@
   <section class="container__gray">
       <h1></h1>
       <h2 class="title">Home Remodeling <span class="hero__title-span">You Can Count On</span></h2>
-      <div>
-        <article class="text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</article>
-        <button>View My Work
-          <img src="./images/arrow-right.svg" alt="arrow-right">
+      <div class="hero__block">
+        <article class="text hero__text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</article>
+        <button class="hero__button text__link">View My Work
+          <img src="./images/arrow-right.svg" class="button__svg" alt="arrow-right">
         </button>
       </div>
     </section>
+<section> 
+  <picture>
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075528/zhuraki/hero/hero_desktop_1x-min_ryju27.jpg 1x,
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075528/zhuraki/hero/hero_desktop_2x-min_pyyvbe.jpg 2x" 
+              media="(min-width: 1360px)" />
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero__tablet_1x-min_o3dpdf.jpg 1x, 
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_tablet_2x-min_zvac9g.jpg 2x" 
+              media="(min-width: 744px) and (max-width: 1359px)" />
+              <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_1x-min_dwjkzc.jpg 1x, 
+              https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_2x-min_hl1gqq.jpg 2x" 
+              media="(max-width: 743px)" />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_1x-min_dwjkzc.jpg" class="hero_image" alt="modern room"  />
+  </picture>
+  <div>     
+      <img src="./images/point.svg" alt="point" width="24" height="24"> 
+      <p class="text__link ">Bedroom Updates</p>
+  </div>
+
+  <div>
+      <img src="./images/point.svg" alt="point" width="24" height="24">
+      <p class="text__link ">Kitchen Remodeling</p>
+  </div>
+
+  <div>      
+     <img src="./images/point.svg" alt="point" width="24" height="24">
+     <p class="text__link ">Bathroom Work</p>
+  </div>
+  <div>  
+      <img src="./images/point.svg" alt="point" width="24" height="24">
+      <p class="text__link ">Basement Remodeling</p>
+  </div>
+</section>
 </body>
 </html>
