--- a/index.html
+++ b/index.html
@@ -55,37 +55,42 @@
         </button>
       </div>
     </section>
-<section> 
+    
+<section class="picture__container"> 
   <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075528/zhuraki/hero/hero_desktop_1x-min_ryju27.jpg 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075528/zhuraki/hero/hero_desktop_2x-min_pyyvbe.jpg 2x" 
-              media="(min-width: 1360px)" />
+              media="(min-width: 1440px)" />
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero__tablet_1x-min_o3dpdf.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_tablet_2x-min_zvac9g.jpg 2x" 
-              media="(min-width: 744px) and (max-width: 1359px)" />
+              media="(min-width: 744px) and (max-width: 1439px)" />
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_1x-min_dwjkzc.jpg 1x, 
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_2x-min_hl1gqq.jpg 2x" 
               media="(max-width: 743px)" />
-           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_1x-min_dwjkzc.jpg" class="hero_image" alt="modern room"  />
+           <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748075088/zhuraki/hero/hero_mob_1x-min_dwjkzc.jpg" class="picture__img" alt="modern room"  />
   </picture>
-  <div>     
+  <div class="picture__blocks block-1">     
       <img src="./images/point.svg" alt="point" width="24" height="24"> 
       <p class="text__link ">Bedroom Updates</p>
   </div>
 
-  <div>
+  <div class="picture__blocks block-2">
       <img src="./images/point.svg" alt="point" width="24" height="24">
       <p class="text__link ">Kitchen Remodeling</p>
   </div>
 
-  <div>      
+  <div class="picture__blocks block-3">      
      <img src="./images/point.svg" alt="point" width="24" height="24">
      <p class="text__link ">Bathroom Work</p>
   </div>
-  <div>  
+  <div class="picture__blocks block-4">  
       <img src="./images/point.svg" alt="point" width="24" height="24">
       <p class="text__link ">Basement Remodeling</p>
   </div>
+</section>
+
+<section class="container__gray">
+
 </section>
 </body>
 </html>
