sections advantades and help

--- a/index.html
+++ b/index.html
@@ -89,8 +89,54 @@
   </div>
 </section>
 
-<section class="container__gray">
+<section class="container__gray section__help">
+   <div>
+     <h2 class="subtitle">Need a Hand With Your Next Home Project?</h2> 
+      <p class="text">Whether it’s a quick fix or a full remodel — we’re here to help.</p>
+      <p class="text">Homeowners and renters count on us for honest work, done right.</p>
+   </div>
+     
+    <picture>
+             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+             https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x" 
+             media="(min-width: 1440px)" />
+             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+            https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x" 
+             media="(min-width: 744px) and (max-width: 1439px)" />
+             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_mob_1x-min_bt1em6.jpg 1x, 
+             https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_mob_2x-min_rwyzq2.jpg 2x" 
+             media="(max-width: 743px)" />
+          <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_mob_1x-min_bt1em6.jpg" class="help__image" alt="kitchen"  />
+   </picture>
+</section>
 
+<section class="container__gray">
+  <ul class="advantages__container">
+    <li class="advantages__article">
+      <img src="./images/arrow-up-right.svg" class="advantages__svg" width="24" height="24">
+      <h3 class="subtitle__article">We Respect Your Time</h3>
+      <p class="text__article">We show up when we say we will — no chasing, no delays</p>
+    </li>
+    <li class="advantages__article">
+      <img src="./images/arrow-up-right.svg" class="advantages__svg" width="24" height="24">
+      <h3 class="subtitle__article">Quality Comes First</h3>
+      <p class="text__article">Very project is done with care, precision, and lasting results</p>
+    </li>
+    <li class="advantages__article">
+      <img src="./images/arrow-up-right.svg"  class="advantages__svg" width="24" height="24">
+      <h3 class="subtitle__article">You Can Count On Us</h3>
+      <p class="text__article">We treat your home like our own — with respect and attention to detail</p>
+    </li>
+  </ul>
+  <!-- <article class="advantages__article">
+    
+  </article> -->
+  <!-- <article class="advantages__article">
+  </article>
+  <article class="advantages__article">
+  </article> -->
+
+  <a href="./gallery.html" class="link advantages__link">View my work</a>
 </section>
 </body>
 </html>
