padding for hero and advantages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      </button>
   </header>
 
-  <section class="container__gray">
+  <section class="container__gray hero__container">
       <h1></h1>
       <h2 class="title">Home Remodeling <span class="hero__title-span">You Can Count On</span></h2>
       <div class="hero__block">
@@ -110,8 +110,8 @@
    </picture>
 </section>
 
-<section class="container__gray">
-  <ul class="advantages__container">
+<section class="container__gray advantages__container">
+  <ul class="advantages__list">
     <li class="advantages__article">
       <img src="./images/arrow-up-right.svg" class="advantages__svg" width="24" height="24">
       <h3 class="subtitle__article">We Respect Your Time</h3>
@@ -128,15 +128,8 @@
       <p class="text__article">We treat your home like our own — with respect and attention to detail</p>
     </li>
   </ul>
-  <!-- <article class="advantages__article">
-    
-  </article> -->
-  <!-- <article class="advantages__article">
-  </article>
-  <article class="advantages__article">
-  </article> -->
 
-  <a href="./gallery.html" class="link advantages__link">View my work</a>
+  <a href="./gallery.html" class="link advantages__link advantages__text">View my work</a>
 </section>
 </body>
 </html>
