--- a/index.html
+++ b/index.html
@@ -131,5 +131,35 @@
 
   <a href="./gallery.html" class="link advantages__link advantages__text">View my work</a>
 </section>
+
+<section class="container__white solve__container">
+    <h2 class="subtitle solve__subtitle">We solve your problems</h2>
+    <ul class="solve__list">
+      <li class="advantages__article solve__article">
+        <p class="solve__number">/01</p>
+        <h3 class="subtitle__article">Bedroom Updates</h3>
+        <p class="text__article">We can refresh your bedroom with new finishes or a better layout</p>
+      </li>
+      <li class="advantages__article solve__article">
+        <p class="solve__number">/02</p>
+        <h3 class="subtitle__article">Basement Remodeling</h3>
+        <p class="text__article">Want to turn your basement into a gym, office, or extra living space? We’ve got you covered</p>
+      </li>
+      <li class="advantages__article solve__article">
+        <p class="solve__number">/03</p>
+        <h3 class="subtitle__article">Bathroom Work</h3>
+        <p class="text__article">From tile to fixtures — We’ll help you create a clean, modern bathroom</p>
+      </li>
+      <li class="advantages__article solve__article">
+        <p class="solve__number">/04</p>
+        <h3 class="subtitle__article">Kitchen Remodeling</h3>
+        <p class="text__article">Let’s upgrade your kitchen and make it a space you love to cook in</p>
+      </li>
+    </ul>
+    <h3 class="solve__text">If you <span class="black">have something else</span> in mind — <span class="black">just ask</span></h3>
+    <button class="solve__button text__link">Text Me Now
+      <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+    </button>
+</section>
 </body>
 </html>
