--- a/index.html
+++ b/index.html
@@ -161,5 +161,10 @@
       <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
     </button>
 </section>
+
+<section class="container__gray">
+<h2 class="subtitle works_subtitle">A Look at Our Work</h2>
+<h3>Basement Remodel </h3>
+</section>
 </body>
 </html>
