--- a/index.html
+++ b/index.html
@@ -162,9 +162,95 @@
     </button>
 </section>
 
-<section class="container__gray">
-<h2 class="subtitle works_subtitle">A Look at Our Work</h2>
-<h3>Basement Remodel </h3>
+<section class="container__gray works__container">
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">Basement Remodel </h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">Basement Remodel </h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">fireplace Remodel  </h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+
+
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">kITCHEN Remodel</h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">BATHROOM Remodel</h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">BATHROOM Remodel  </h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+<div>
+  <h2 class="subtitle works_title">A Look at Our Work</h2>
+  <div class="works__text__container">
+    <h3 class="solve__text black__2 works__subtitle">fireplace Remodel </h3>
+    <p class="works__text">Jersey City, NJ</p>
+    <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
+  </div>
+  <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+    <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+  </a>
+</div>
+
+
+
+
 </section>
 </body>
 </html>
